--- a/src/main/resources/role.properties
+++ b/src/main/resources/role.properties
@@ -1,23 +1,36 @@
 api.v1.categories.create = ROLE_CATEGORY_CREATE
 api.v1.categories.update = ROLE_CATEGORY_UPDATE
-api.v1.categories.delete = ROLE_CATEGORY_DELETE
+api.v1.categories.destroy = ROLE_CATEGORY_DELETE
+
 api.v1.books.create = ROLE_BOOK_CREATE
 api.v1.books.update = ROLE_BOOK_UPDATE
-api.v1.books.delete = ROLE_BOOK_DELETE
+api.v1.books.destroy = ROLE_BOOK_DELETE
+
 api.v1.posts.create = ROLE_POST_CREATE
 api.v1.posts.update = ROLE_POST_UPDATE
-api.v1.posts.delete = ROLE_POST_DELETE
+api.v1.posts.destroy = ROLE_POST_DELETE
+
 api.v1.comments.create = ROLE_COMMENT_CREATE
 api.v1.comments.update = ROLE_COMMENT_UPDATE
-api.v1.comments.delete = ROLE_COMMENT_DELETE
+api.v1.comments.destroy = ROLE_COMMENT_DELETE
+
 api.v1.users.update = ROLE_USER_UPDATE
-api.v1.users.delete = ROLE_USER_DELETE
+api.v1.users.destroy = ROLE_USER_DELETE
+
+api.v1.borrows = ROLE_BORROW_VIEW
 api.v1.borrows.create = ROLE_BORROW_CREATE
 api.v1.borrows.update = ROLE_BORROW_UPDATE
-api.v1.borrows.delete = ROLE_BORROW_DELETE
+api.v1.borrows.destroy = ROLE_BORROW_DELETE
+
 api.v1.role_groups.create = ROLE_ROLE_GROUP_CREATE
 api.v1.role_groups.update = ROLE_ROLE_GROUP_UPDATE
-api.v1.role_groups.delete = ROLE_ROLE_GROUP_DELETE
+api.v1.role_groups.destroy = ROLE_ROLE_GROUP_DELETE
+
+api.v1.functions = ROLE_FUNCTION_VIEW
 api.v1.functions.create = ROLE_FUNCTION_CREATE
-api.v1.functions.update = ROLE_FUNCTION_CREATE
-api.v1.functions.delete = ROLE_FUNCTION_CREATE
+api.v1.functions.update = ROLE_FUNCTION_UPDATE
+api.v1.functions.destroy = ROLE_FUNCTION_DELETE
+
+api.v1.roles_groups.create = ROLE_ROLE_GROUP_CREATE
+api.v1.roles_groups.update = ROLE_ROLE_GROUP_UPDATE
+api.v1.roles_groups.destroy = ROLE_ROLE_GROUP_DELETE
