feat(Refresh Token): update logic

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,7 @@ api:
   prefix: ${API_PREFIX}
 jwt:
   expiration: ${JWT_EXPIRATION}
+  refresh_expiration: ${JWT_REFRESH_EXPIRATION}
   secretKey: ${JWT_SECRET_KEY}
 logging:
   level:
