--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,39 +1,3 @@
 spring:
-  application:
-    name: library
-  datasource:
-    url: ${DATASOURCE_URL}
-    username: ${DATASOURCE_USER}
-    password: ${DATASOURCE_PASSWORD}
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-  messages:
-    basename: i18n/messages
-  main:
-    allow-bean-definition-overriding: true
-server:
-  servlet:
-    context-path: ${CONTEXT_PATH}
-api:
-  prefix: ${API_PREFIX}
-jwt:
-  expiration: ${JWT_EXPIRATION}
-  refresh_expiration: ${JWT_REFRESH_EXPIRATION}
-  secretKey: ${JWT_SECRET_KEY}
-logging:
-  level:
-    org.springframework.security: DEBUG
-
-#spring doc configurations
-springdoc:
-  swagger-ui:
-    path: /swagger-ui/index.html
-  api-docs:
-    path: /api-docs
-  show-actuator: true
+  profiles:
+    active: dev  # Chọn profile mặc định (nếu không được đặt qua môi trường)
