--- a/src/main/resources/role.properties
+++ b/src/main/resources/role.properties
@@ -14,6 +14,7 @@ api.v1.comments.create = ROLE_COMMENT_CREATE
 api.v1.comments.update = ROLE_COMMENT_UPDATE
 api.v1.comments.destroy = ROLE_COMMENT_DELETE
 
+api.v1.users.excel = ROLE_USER_VIEW
 api.v1.users.update = ROLE_USER_UPDATE
 api.v1.users.destroy = ROLE_USER_DELETE
 
