refactor(Post, Comment): delegate owner checking to services and add keys for i18n

--- a/src/main/resources/role.properties
+++ b/src/main/resources/role.properties
@@ -8,11 +8,13 @@ api.v1.books.destroy = ROLE_BOOK_DELETE
 
 api.v1.posts.create = ROLE_POST_CREATE
 api.v1.posts.update = ROLE_POST_UPDATE
-api.v1.posts.destroy = ROLE_POST_DELETE
+api.v1.posts.delete = ROLE_POST_DELETE
+api.v1.posts.destroy = ROLE_POST_DESTROY
 
 api.v1.comments.create = ROLE_COMMENT_CREATE
 api.v1.comments.update = ROLE_COMMENT_UPDATE
-api.v1.comments.destroy = ROLE_COMMENT_DELETE
+api.v1.comments.delete = ROLE_COMMENT_DELETE
+api.v1.comments.destroy = ROLE_COMMENT_DESTROY
 
 api.v1.users.excel = ROLE_USER_VIEW
 api.v1.users.update = ROLE_USER_UPDATE
@@ -31,7 +33,3 @@ api.v1.functions = ROLE_FUNCTION_VIEW
 api.v1.functions.create = ROLE_FUNCTION_CREATE
 api.v1.functions.update = ROLE_FUNCTION_UPDATE
 api.v1.functions.destroy = ROLE_FUNCTION_DELETE
-
-api.v1.roles_groups.create = ROLE_ROLE_GROUP_CREATE
-api.v1.roles_groups.update = ROLE_ROLE_GROUP_UPDATE
-api.v1.roles_groups.destroy = ROLE_ROLE_GROUP_DELETE
